--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Slug.css"/>
     <meta property="og:type" content="profile"/>
     <meta property="og:url" content="https://namekujilsds.github.io/"/>
-    <meta property="og:description" content="CSS for Krunker. Code By NamekujiLSDs#7777"/>
+    <meta property="og:description" content="CSS for Krunker. Code By Leks"/>
     <meta property="og:image" content="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/Tumbnail.png"/>
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/Tumbnail.png"/>
     <meta property="og:image:type" content="image/png"/>
@@ -16,7 +16,7 @@
 
     <meta name="twitter:title" content="Slug.css" />
     <meta name="twitter:site" content="@NamekujiLSDs" />
-    <meta name="twitter:description" content="CSS for krunker made by NamekujiLSDs#7777 is here!!!!"/>
+    <meta name="twitter:description" content="CSS for krunker made by LEKS is here!!!!"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:image" content="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/Tumbnail.png" />
 
@@ -39,7 +39,7 @@
 
 <body>
     <h1 class="title">Krunker CSS</h1>
-    <h4 class="myname">By NamekujiLSDs#7777</h4>
+    <h4 class="myname">By Leks</h4>
 	<img class="social" alt="Twitter" src="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/twitter.png" onclick="window.open('https://twitter.com/NamekujiLSDs')">
 	<img class="social" alt="youtube" src="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/youtube.png" onclick="window.open('https://www.youtube.com/channel/UCH65I7YbpEK7B8-Wkr75CJQ/featured')">
 	<p class="rs">⚠RESOURCE SWAPPERS ARE REQUIRED⚠</p>
