--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Slug.css"/>
     <meta property="og:type" content="profile"/>
     <meta property="og:url" content="https://namekujilsds.github.io/"/>
-    <meta property="og:description" content="CSS for Krunker. Code By Leks"/>
+    <meta property="og:description" content="CSS for Krunker. Code By NamekujiLSDs#7777"/>
     <meta property="og:image" content="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/Tumbnail.png"/>
     <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/Tumbnail.png"/>
     <meta property="og:image:type" content="image/png"/>
@@ -39,10 +39,10 @@
 
 <body>
     <h1 class="title">Krunker CSS</h1>
-    <h4 class="myname">By Leks</h4>
+    <h4 class="myname">By NamekujiLSDs#7777</h4>
 	<img class="social" alt="Twitter" src="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/twitter.png" onclick="window.open('https://twitter.com/NamekujiLSDs')">
 	<img class="social" alt="youtube" src="https://raw.githubusercontent.com/NamekujiLSDs/NAMEKUJILSDS.github.io/main/youtube.png" onclick="window.open('https://www.youtube.com/channel/UCH65I7YbpEK7B8-Wkr75CJQ/featured')">
-	<p class="rs">⚠RESOURCE SWAPPERS ARE REQUIRED⚠</p>
+	<p class="rs">âš RESOURCE SWAPPERS ARE REQUIREDâš </p>
 	<br><br>
 	
 
@@ -76,7 +76,7 @@
 	 <br>
     <input class="download" type="button" value="Download Slug.exe CSS" onclick="window.open('https://github.com/NamekujiLSDs/NAMEKUJILSDS.github.io/raw/main/KrunkerCSS/slugexe.zip')">
 	 	<p><br><br></p>
-		<p class="cr">©2021 All rights reserved by Namekuji.</p>
+		<p class="cr">Â©2021 All rights reserved by Leks.</p>
 
 </body>
 
